--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,16 @@ asgiref==3.2.10
 certifi==2020.12.5
 chardet==4.0.0
 Django==3.1.2
+gunicorn==20.0.4
 idna==2.10
+PyJWT==1.7.1
 pytz==2020.5
 requests==2.25.1
 six==1.15.0
 spotipy==2.16.1
 sqlparse==0.4.1
+twilio==6.51.0
 urllib3==1.26.2
+psycopg2-binary==2.8.6
+whitenoise==5.2.0
+dj-database-url==0.5.0
