--- a/Pipfile
+++ b/Pipfile
@@ -16,7 +16,11 @@ sqlparse = "==0.4.1"
 urllib3 = "==1.26.2"
 Django = "==3.1.2"
 gunicorn = "==20.0.4"
-dj-database-url = "*"
+dj-database-url = "==0.5.0"
+whitenoise = "==5.2.0"
+psycopg2-binary = "==2.8.6"
+twilio = "==6.51.0"
+PyJWT = "==1.7.1"
 
 [dev-packages]
 
